Add suggestion of new navbar with tick

--- a/app/views/Main.html
+++ b/app/views/Main.html
@@ -18,7 +18,8 @@
     <a class="navbar-brand" href="#"><img alt="Tatoo" src="images/armadito.png" class="img-responsive"></a>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-          <li><h4 class="status"><b >{{'main_view.Your_computer_is_protected' | translate}}</b></h4></li>
+	  <li><img alt="Tatoo" src="images/navbarOk_.png" class="img-responsive"></li>
+          <li><h4 class="status">{{'main_view.Your_computer_is_protected' | translate}}</h4></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ><a ui-sref="Main.Parameters" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">{{'main_view.Parameters' | translate}}</span></a></li>
