Hide not implemented yet code in ihm

--- a/app/views/Main.html
+++ b/app/views/Main.html
@@ -21,7 +21,8 @@
           <li><h4 class="status"><b >{{'main_view.Your_computer_is_protected' | translate}}</b></h4></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li ><a ui-sref="Main.Parameters" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">{{'main_view.Parameters' | translate}}</span></a></li>
+	<!-- ui-sref="Main.Parameters" -->
+        <li ><a ui-sref="" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">{{'main_view.Parameters' | translate}}</span></a></li>
         <li><a href=""><i class="fa fa-bar-chart fa-lg"></i>&nbsp;{{'main_view.Statistics' | translate}}</a></li>
         <li>
           <a href="">
