--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -15,7 +15,7 @@
 	  <div class="col-xs-4 col-sm-4 col-md-4">
 	  	<ul class="information">
 		  <li class="information2">
-		  	<input type="checkbox" ng-model="state.realtime" ng-change="testfunc()" name="checkbox1" id="checkbox1" class="ios-toggle" checked/>
+		  	<input type="checkbox" ng-model="state.realtime" disabled ng-change="testfunc()" name="checkbox1" id="checkbox1" class="ios-toggle" checked/>
 			<label for="checkbox1" class="checkbox-label"></label>
 		  </li>
 		  <li class="information2"><h5><i ng-class="state.service ? 'fa fa-check checkIcon' : 'fa fa-exclamation-triangle text-danger'"></i></h5></li>
