The Armadito window is now draggable

--- a/app/views/Confirmation.html
+++ b/app/views/Confirmation.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="" style="-webkit-app-region: no-drag;" >
 	<div class="modal-header modal-header-analyse ">
 	    <button type="button" ng-click="cancel()" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	    <span class="modal-title"><i><h3 class="analyseTitle">{{title | translate}} Armadito</h3></span>
