fix renaming error of scrollbottom

--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -75,7 +75,7 @@
 				     <th class="analyse" style="width:60%"><h4><i>Fichiers</i></h4></th>
 				  </tr>
 				 </thead>
-			    <tbody class="analyse" id="ex3" schroll-bottom="scan_data.files">
+			    <tbody class="analyse" id="ex3" scroll-bottom="scan_data.files">
 			      <tr class="analyse" ng-repeat="file in scan_data.files">
 			      	<td style="width:10%" ng-if="file.scan_status === 'malware'" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
 			      	<td style="width:10%" ng-if="file.scan_status === 'suspicious'"class="analyse orangeCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
