Fix a bug when building with grunt

--- a/app/views/Main.html
+++ b/app/views/Main.html
@@ -23,7 +23,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
 	<!-- ui-sref="Main.Parameters" -->
-        <li style="-webkit-app-region: no-drag;" ><a ui-sref="" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">{{'main_view.Parameters' | translate}}</span></a></li>
+        <li style="-webkit-app-region: no-drag;" ><a href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">{{'main_view.Parameters' | translate}}</span></a></li>
         <li style="-webkit-app-region: no-drag;" ><a href=""><i class="fa fa-bar-chart fa-lg"></i>&nbsp;{{'main_view.Statistics' | translate}}</a></li>
         <li style="-webkit-app-region: no-drag;">
           <a href="">
