remove 2 ng-if and reduce scan_data size

--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -79,8 +79,8 @@
 			      <tr class="analyse" ng-repeat="file in scan_data.files">
 			      	<td style="width:10%" ng-if="file.scan_status === 'malware'" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
 			      	<td style="width:10%" ng-if="file.scan_status === 'suspicious'"class="analyse orangeCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
-			        <td style="width:30%" title="{{file.mod_report}}" ng-if="file.scan_status === 'suspicious' || file.scan_status === 'malware'" class="analyse" ><h7>{{file.mod_report | characters: 17}}</h7></td>
-			        <td style="width:60%" title="{{file.path}}" ng-if="file.scan_status === 'suspicious' || file.scan_status === 'malware'" class="analyse"><h7>{{file.path | characters: 40}}</h7></td>
+			        <td style="width:30%" title="{{file.mod_report}}" class="analyse" ><h7>{{file.mod_report | characters: 17}}</h7></td>
+			        <td style="width:60%" title="{{file.path}}" class="analyse"><h7>{{file.path | characters: 40}}</h7></td>
 			      </tr>
 			    </tbody>
 			</table>
