Avoid DDOS if user spam cancel button clicks

--- a/gui/app/views/Scan.html
+++ b/gui/app/views/Scan.html
@@ -19,7 +19,7 @@
 				    </div>
 	            </div>
 	            <div class="col-xs-3 col-sm-3 col-md-3">
-	            	<button style="-webkit-app-region: no-drag;" type="button" class="btn stopButton" ng-click="CancelScan()" ng-if="scan_data.progress && scan_data.progress < 100 && !canceled" >{{ 'analyse_view.Stop' | translate}}</button>
+	            	<button style="-webkit-app-region: no-drag;" type="button" class="btn stopButton" ng-click="CancelScan()" ng-if="scan_data.progress && scan_data.progress < 100" >{{ 'analyse_view.Stop' | translate}}</button>
 	            	<button style="-webkit-app-region: no-drag;" type="button" class="btn startButton" ng-click="StartScan()" ng-if="!scan_data.progress || scan_data.progress === 100" >{{ 'analyse_view.Start' | translate}}</button>
 	            </div>
 	        </div>
