Comment not implemented Journal tab in gui

--- a/gui/app/views/Journal.html
+++ b/gui/app/views/Journal.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<br>
+		<!--
 		<div class="col-md-10 col-md-offset-1 journal">
 			<uib-tabset>
 				<uib-tab >
@@ -434,6 +435,7 @@
 					</div>	
 				</uib-tab>
 			</uib-tabset>
-		</div>
+			
+		</div> -->
 	</div>
 </div>
