--- a/gui/app/views/Scan.html
+++ b/gui/app/views/Scan.html
@@ -19,8 +19,8 @@
 				    </div>
 	            </div>
 	            <div class="col-xs-3 col-sm-3 col-md-3">
-	            	<button style="-webkit-app-region: no-drag;" type="button" class="btn stopButton" ng-click="CancelScan()" ng-if="scan_data.progress && scan_data.progress < 100" >{{ 'analyse_view.Stop' | translate}}</button>
-	            	<button style="-webkit-app-region: no-drag;" type="button" class="btn startButton" ng-click="StartScan()" ng-if="!scan_data.progress || scan_data.progress === 100" >{{ 'analyse_view.Start' | translate}}</button>
+                    <button style="-webkit-app-region: no-drag;" type="button" class="btn stopButton" ng-click="CancelScan()" ng-if="scan_progress && scan_progress < 100" >{{ 'analyse_view.Stop' | translate}}</button>
+                    <button style="-webkit-app-region: no-drag;" type="button" class="btn startButton" ng-click="StartScan()" ng-if="!scan_progress || scan_progress === 100" >{{ 'analyse_view.Start' | translate}}</button>
 	            </div>
 	        </div>
 	    </form>
@@ -53,12 +53,12 @@
 	</div>
 	<div class="row pullTop" >
 	  	<div class="col-sm-offset-1 col-md-offset-1 col-xs-10 col-sm-10 col-md-10" >
-		    <h6 ng-if="scan_data.displayed_file" > &nbsp;&nbsp;&nbsp;&nbsp;{{ 'analyse_view.Scanning_file' | translate}} : <b>{{truncate(scan_data.displayed_file,50)}}</b></h6>
-		    <uib-progressbar max="max" class="progressBar" value="scan_data.progress"><span class="progressBarPercent"><span ng-if="scan_data.progress > 0 || scan_data.progress === 0">{{scan_data.progress}}%</span></span>
+		    <h6 ng-if="displayed_file" > &nbsp;&nbsp;&nbsp;&nbsp;{{ 'analyse_view.Scanning_file' | translate}} : <b>{{truncate(displayed_file,50)}}</b></h6>
+		    <uib-progressbar max="max" class="progressBar" value="scan_progress"><span class="progressBarPercent"><span ng-if="scan_progress > 0 || scan_progress === 0">{{scan_progress}}%</span></span>
 	    	</uib-progressbar>   
 	  	</div>
 	</div>
-	<!--<div class="row" ng-if="!scan_data.progress">	
+	<!--<div class="row" ng-if="!scan_progress">
 		<br>
 		<br>
 		<div class=" col-sm-4 col-md-4 col-sm-offset-4 col-md-offset-4">
@@ -75,8 +75,8 @@
 				     <th class="analyse" style="width:60%"><h4><i>Fichiers</i></h4></th>
 				  </tr>
 				 </thead>
-			    <tbody class="analyse" id="ex3" style="-webkit-app-region: no-drag;"> <!-- scroll-bottom="scan_data.files" -->
-			      <tr class="analyse" ng-repeat="file in scan_data.files">
+			    <tbody class="analyse" id="ex3" style="-webkit-app-region: no-drag;"> <!-- scroll-bottom="scan_files" -->
+			      <tr class="analyse" ng-repeat="file in scan_files">
 			      	<td style="width:10%" ng-if="file.scan_status === 'malware'" class="analyse redCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
 			      	<td style="width:10%" ng-if="file.scan_status === 'suspicious'"class="analyse orangeCircle"><h7><i class="fa fa-circle fa-lg"></i></h7></td>
 			        <td style="width:30%" title="{{file.mod_report}}" class="analyse" ><h7>{{file.mod_report | characters: 17}}</h7></td>
